Fix dark mode for emojis.

--- a/_sass/mold.scss
+++ b/_sass/mold.scss
@@ -1,12 +1,12 @@
 // -------------- THEME SWITCHER -------------- //
 @mixin dark-appearance {
-  // filter: invert(1);
-  // img {
-  //   filter: invert(1);
-  //   &.ioda {
-  //     filter: invert(0);
-  //   }
-  // }
+  filter: invert(1) hue-rotate(180deg);
+  img {
+    filter: invert(1);
+    &.ioda {
+      filter: invert(0);
+    }
+  }
 }
 
 body[a="dark"] { @include dark-appearance; }
